// Copyright 2024 Cisco Systems, Inc. and its affiliates
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package proto.syntest;
option go_package = "proto";

// message to hold the config for a syntest plugin
message SynTestConfig {
    string name = 1; // name of the test (must be unique)
    string pluginName = 2; // which plugin to run
    string displayName = 3; // user friendly name for the test
    string description = 4;
    string namespace = 5; // namespace in which the test exists (a way of grouping similar tests) - borrowed from k8s
    string importance = 6; // importance of the test (unused currently)
    string repeat = 7; // how often to repeat the test
    string agentSelector = 8; // which agent the test should run on
    repeated string dependsOn = 9; // other test(s) which this test is dependant on
    Timeouts timeouts = 10; // timeouts for different functions
    string pluginRestartPolicy = 11; // restart policy for plugins
    string logWaitTime = 12; // how long to wait for logs
    string config = 13; // can be anything (YAML preferred) - upto the plugin to parse the config
    map<string, string> etc = 14; // any runtime info - auto filled by agent
}

// message to hold info about the test run and how it was run
message TestRun {
    string id = 1; // Id of the test run
    string agentId = 2; // Id of the agent the test ran in
    string startTime = 3; // Start time in nano seconds
    string endTime = 4; // End time in nano seconds
    SynTestConfig testConfig = 5; // The config of the syn test
    Trigger trigger = 6; // Information about what triggered the test run
    TestResult testResult = 7; // The result
    map<string, string> details = 8; // Any other info
}

// message to hold info about what triggered the test run
message Trigger {
    string triggerType = 1;
    TestRun triggeringTest = 2; // Contains the test run that was responsible for triggering test (if triggered by another test)
    string details = 3; // Any useful information
}

// message to hold the test result
message TestResult {
    uint64 marks = 1;
    uint64 maxMarks = 2;
    map<string, string> details = 3; // Tests can add additional details - e.g. targeting specific result handlers
}

// message to hold info about timeouts
message Timeouts {
    string init = 1;    // time out plugins to complete init function
    string run = 2;     // time out plugins to complete run/handle/test functions
    string finish = 3;  // time out plugins to complete finish function
}

message Empty {
}

service SynTestPlugin {
    // Called once at the start - for setup
    rpc Initialise (SynTestConfig) returns (Empty);

    // Called periodically or when another test is done - as configured in the synthetic heart config
    // TestRun contains details from another test that the current test might depend on, otherwise empty
    rpc PerformTest (Trigger) returns (TestResult);

    // Called once before the plugin is killed
    rpc Finish (Empty) returns (Empty);
}